--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,8 @@
 	path = code/tacc-openneuro
 	url = https://github.com/poldracklab/tacc-openneuro.git
 	datalad-url = https://github.com/poldracklab/tacc-openneuro.git
+[submodule "sourcedata/raw"]
+	path = sourcedata/raw
+	url = https://github.com/OpenNeuroDatasets/ds000223.git
+	datalad-id = 039007f6-89ce-11e8-8d12-0242ac12001a
+	datalad-url = https://github.com/OpenNeuroDatasets/ds000223.git
