--- a/.gitmodules
+++ b/.gitmodules
@@ -11,7 +11,7 @@
 	path = sourcedata/raw
 	url = https://github.com/OpenNeuroDatasets/ds000223.git
 	datalad-id = 039007f6-89ce-11e8-8d12-0242ac12001a
-	datalad-url = https://github.com/OpenNeuroDatasets/ds000223.git
+	datalad-url = /scratch1/03201/jbwexler/openneuro_derivatives/raw/ds000223
 [submodule "sourcedata/templateflow"]
 	path = sourcedata/templateflow
 	url = https://github.com/templateflow/templateflow.git
